--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  grid-gap: 30px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 100vh;
+}
+.EndScreen{
+  display: none;
+}
+.grid{
+  display: none;
+  grid-template-columns: repeat(10, 30px);
+  grid-template-rows: repeat(10, 30px);
+}
+.kocka{
+  background-color: blue;
+  border: 1px solid black;
+  cursor: pointer;
+  color: transparent;
+  font-weight: bold;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+     -moz-user-select: none; /* Old versions of Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
+          user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome, Edge, Opera and Firefox */
+}
+.kocka:hover{
+  opacity: 0.8;
+}
+
+.start button{
+  padding: 10px 30px;
+  background-color: blue;
   color: white;
+  cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+.start button:hover{
+  opacity: 0.8;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.restart{
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items:stretch;
+  grid-gap: 10px;
+}
+.restart .flags{
+  color: yellow;
+  background-color: black;
+  padding: 10px;
+  margin: 0;
+}
+.restart .openFields{
+  color: white;
+  background-color: lightseagreen;
+  padding: 10px;
+  margin: 0;
+}
+.restart button{
+  padding: 10px 30px;
+  background-color: blue;
+  color: white;
+  cursor: pointer;
+}
+.restart button:hover{
+  opacity: 0.8;
+}
+#nula{
+  color: transparent !important;
 }
